--- a/BT.Admin/_Imports.razor
+++ b/BT.Admin/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using BT.Admin
 @using BT.Admin.Shared
+@using BT.Core
+@using BT.Core.ViewModels
+@using BT.Datastore.EFCore
