--- a/BTW.Web/BTW.Web/Components/Account/Pages/ExternalLogin.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/ExternalLogin.razor
@@ -4,6 +4,7 @@
 @using System.Security.Claims
 @using System.Text
 @using System.Text.Encodings.Web
+@using BT.Web.Components.Account
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using BTW.Datastore.EFCore.Core
