--- a/BTW.Web/BTW.Web/Components/Account/Pages/Manage/Disable2fa.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Manage/Disable2fa.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Account/Manage/Disable2fa"
 
+@using BT.Web.Components.Account
 @using Microsoft.AspNetCore.Identity
 @using BTW.Datastore.EFCore.Core
 
