--- a/BTW.Web/BTW.Web/Components/Account/Pages/Manage/Email.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Manage/Email.razor
@@ -3,6 +3,7 @@
 @using System.ComponentModel.DataAnnotations
 @using System.Text
 @using System.Text.Encodings.Web
+@using BT.Web.Components.Account
 @using BTW.Datastore.EFCore.Core
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
