--- a/BTW.Web/BTW.Web/Components/Account/Pages/Manage/SetPassword.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Manage/SetPassword.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Account/Manage/SetPassword"
 
 @using System.ComponentModel.DataAnnotations
+@using BT.Web.Components.Account
 @using BTW.Datastore.EFCore.Core
 @using Microsoft.AspNetCore.Identity
 
