--- a/BTW.Web/BTW.Web/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Account/Manage/TwoFactorAuthentication"
 
+@using BT.Web.Components.Account
 @using Microsoft.AspNetCore.Http.Features
 @using Microsoft.AspNetCore.Identity
 @using BTW.Datastore.EFCore.Core
