--- a/BTW.Web/BTW.Web/Components/_Imports.razor
+++ b/BTW.Web/BTW.Web/Components/_Imports.razor
@@ -10,3 +10,6 @@
 @using BTW.Web
 @using BTW.Web.Client
 @using BTW.Web.Components
+@using BTW.Web.Components.Account
+@using BT.Core
+@using BT.Core.ViewModels
