--- a/BT.Admin/Shared/MainLayout.razor.css
+++ b/BT.Admin/Shared/MainLayout.razor.css
@@ -91,7 +91,8 @@ main {
 	box-shadow: 20px -20px 0 var(--grey);
 	z-index: -1;
 }
-#sidebar .side-menu li a {
+#sidebar .side-menu li a,
+#sidebar .side-menu li > a {
 	width: 100%;
 	height: 100%;
 	background: var(--light);
