--- a/BT.Admin/Shared/Sidebar.razor
+++ b/BT.Admin/Shared/Sidebar.razor
@@ -18,12 +18,24 @@
 			</a>
 		</li>
 		<li>
-			<a href="#">
+			<NavLink href="/products/index">
 				<span class="material-symbols-sharp">
 					inventory
 				</span>
-				<span class="text">Products</span>
-			</a>
+				<span class="text">
+					Products
+				</span>
+			</NavLink>
+		</li>
+		<li>
+			<NavLink href="/brands/index" Match="NavLinkMatch.Prefix">
+				<span class="material-symbols-sharp">
+					stacks
+				</span>
+				<span class="text">
+					Brands
+				</span>
+			</NavLink>
 		</li>
 		<li>
 			<a href="#">
@@ -43,7 +55,9 @@
 		</li>
 		<li>
 			<a href="#">
-				<i class='bx bxs-group'></i>
+				<span class="material-symbols-sharp">
+					groups
+				</span>
 				<span class="text">Team</span>
 			</a>
 		</li>
