--- a/BTW.Web/BTW.Web/Components/Account/Pages/ConfirmEmail.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/ConfirmEmail.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Account/ConfirmEmail"
 
 @using System.Text
+@using BT.Web.Components.Account
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using BTW.Datastore.EFCore.Core
