--- a/BTW.Web/BTW.Web/Components/Account/Pages/Login.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Login.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Account/Login"
 
 @using System.ComponentModel.DataAnnotations
+@using BT.Web.Components.Account
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 @using BTW.Datastore.EFCore.Core
