--- a/BTW.Web/BTW.Web/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -4,6 +4,7 @@
 @using System.Globalization
 @using System.Text
 @using System.Text.Encodings.Web
+@using BT.Web.Components.Account
 @using Microsoft.AspNetCore.Identity
 @using BTW.Datastore.EFCore.Core
 
