--- a/BTW.Web/BTW.Web/Components/Account/Pages/Manage/ExternalLogins.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Manage/ExternalLogins.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Account/Manage/ExternalLogins"
 
+@using BT.Web.Components.Account
 @using BTW.Datastore.EFCore.Core
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
