--- a/BTW.Web/BTW.Web/Components/Account/Pages/Manage/ResetAuthenticator.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/Manage/ResetAuthenticator.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Account/Manage/ResetAuthenticator"
 
+@using BT.Web.Components.Account
 @using Microsoft.AspNetCore.Identity
 @using BTW.Datastore.EFCore.Core
 
