--- a/BTW.Web/BTW.Web/Components/Account/Pages/ResetPassword.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Pages/ResetPassword.razor
@@ -2,6 +2,7 @@
 
 @using System.ComponentModel.DataAnnotations
 @using System.Text
+@using BT.Web.Components.Account
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using BTW.Datastore.EFCore.Core
