--- a/BTW.Web/BTW.Web/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Authentication
+﻿@using BT.Web.Components.Account
+@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 @using BTW.Datastore.EFCore.Core
 
