--- a/BTW.Web/BTW.Web/Components/Account/Shared/StatusMessage.razor
+++ b/BTW.Web/BTW.Web/Components/Account/Shared/StatusMessage.razor
@@ -1,4 +1,5 @@
-﻿@if (!string.IsNullOrEmpty(DisplayMessage))
+﻿@using BT.Web.Components.Account
+@if (!string.IsNullOrEmpty(DisplayMessage))
 {
     var statusMessageClass = DisplayMessage.StartsWith("Error") ? "danger" : "success";
     <div class="alert alert-@statusMessageClass" role="alert">
