--- a/BT.Admin/Pages/Brands/Create.razor
+++ b/BT.Admin/Pages/Brands/Create.razor
@@ -1,5 +1,6 @@
 ﻿@page "/brands/create"
 
+
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Mvc;
 @using BT.Admin.Components.Validation
@@ -21,7 +22,8 @@
 	private CustomValidation? customValidation;
 	private bool disabled;
 	private string? message;
-	private string messageStyles = "visibility:hidden";
+	private string messageStyles = "visibility:hidden!";
+	private bool ShowErrorDiv = false;
 
 	protected override void OnInitialized() => Brand ??= new();
 
@@ -53,6 +55,7 @@
 				disabled = true;
 				messageStyles = "color:red";
 				message = status.ErrorMessage;
+				ShowErrorDiv = true;
 			}
 		}
 		
@@ -74,7 +77,7 @@
 					</span>
 				</li>
 				<li>
-					<a class="active" href="#">All</a>
+					<a class="active" href="/brands/index">All</a>
 				</li>
 			</ul>
 		</div>
@@ -97,27 +100,18 @@
 					<span class="text-danger"></span>
 				</div>
 				
-				<div class="form-group">
-					<label for="About" class="">About</label>
-					<InputTextArea @bind-Value=Brand.About class="form-control" type="text" aria-label="about this brand" id="About" />
-					<span class="text-danger"></span>
-				</div>
-				<div class="form-group">
-					<label for="Logo" class="">Logo</label>
-					<InputText @bind-Value=Brand.Logo class="form-control" type="text" aria-label="logo name" id="Logo" />
-					<span class="text-danger"></span>
-				</div>
 
 				<div class="form-group">
 					<div class="actions-wrap"> 
 						<button class="btn btn-primary" type="submit" disabled="@disabled">Submit</button>
 					</div>					
 				</div>
-				<div class="form-group">
+				<div hidden="@ShowErrorDiv" class="form-group" style="@(ShowErrorDiv ? "" : "display:none")">
 					<div class="form-server-error" stlye="@messageStyles">
-						<span>Attempted to add product brand with duplicate code: LOWE. Timestamp: 26/07/2024 17:35:31</span>
+						@message
 					</div>
 				</div>
+				
 			</EditForm>
 		</div>
 		
