--- a/BT.Admin/Shared/MainLayout.razor
+++ b/BT.Admin/Shared/MainLayout.razor
@@ -101,6 +101,16 @@
 				</span>
 			</a>
 		</li>
+		<li class="nav-item @GetActive("categories/index", NavLinkMatch.All)">
+			<a href="/categories/index">
+				<span class="material-symbols-sharp">
+					category_search
+				</span>
+				<span class="text">
+					Categories
+				</span>
+			</a>
+		</li>
 
 
 		<li>
