--- a/BT.Admin/Pages/_Layout.cshtml
+++ b/BT.Admin/Pages/_Layout.cshtml
@@ -10,6 +10,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="css/tables.css" rel="stylesheet" />
     <link href="BT.Admin.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
